export const DEFAULT_CATEGORIES = [
  {
    color: '#2A8899',
    iconName: 'school-outline',
    name: 'School',
    tasksAmount: 0,
  },
  {
    color: '#5EB0D2',
    iconName: 'briefcase-outline',
    name: 'Work',
    tasksAmount: 0,
  },
  {
    color: '#BE8972',
    iconName: 'cart-outline',
    name: 'Shop',
    tasksAmount: 0,
  },
  {
    color: '#646FD4',
    iconName: 'book-outline',
    name: 'Read',
    tasksAmount: 0,
  },
  {
    color: '#83BC74',
    iconName: 'bicycle-outline',
    name: 'Work out',
    tasksAmount: 0,
  },
];
