...
  'logo-octocat',
  'logo-paypal',
  'logo-pinterest',
  'logo-playstation',
  'logo-pwa',
  'logo-python',
  'logo-react',
  'logo-reddit',
  'logo-rss',
  'logo-sass',
  'logo-skype',
  'logo-slack',
  'logo-snapchat',
  'logo-soundcloud',
  'logo-stackoverflow',
...
